xpl/xpl_parser.output
   0  $accept : file $end

   1  file : declarations
   2       |

   3  declarations : declaration
   4               | declarations declaration

   5  declaration : var ';'
   6              | function

   7  var : type tIDENTIFIER
   8      | tPUBLIC type tIDENTIFIER
   9      | tUSE type tIDENTIFIER
  10      | type tIDENTIFIER '=' expr
  11      | tPUBLIC type tIDENTIFIER '=' expr
  12      | tUSE type tIDENTIFIER '=' expr

  13  function : tPROCEDURE tIDENTIFIER '(' functionargs ')'
  14           | tPROCEDURE tUSE type_void tIDENTIFIER '(' functionargs ')'
  15           | tPROCEDURE tPUBLIC type_void tIDENTIFIER '(' functionargs ')'
  16           | type tIDENTIFIER '(' functionargs ')'
  17           | tUSE type tIDENTIFIER '(' functionargs ')'
  18           | tPUBLIC type tIDENTIFIER '(' functionargs ')'
  19           | type tIDENTIFIER '(' functionargs ')' '=' literal
  20           | tPUBLIC type tIDENTIFIER '(' functionargs ')' '=' literal
  21           | tPROCEDURE type_void tIDENTIFIER '(' functionargs ')' block
  22           | tPROCEDURE tPUBLIC type_void tIDENTIFIER '(' functionargs ')' block
  23           | type tIDENTIFIER '(' functionargs ')' block
  24           | tPUBLIC type tIDENTIFIER '(' functionargs ')' block
  25           | tPROCEDURE tIDENTIFIER '(' functionargs ')' block
  26           | tPROCEDURE tPUBLIC type_void tIDENTIFIER '(' functionargs ')' '=' literal block
  27           | type tIDENTIFIER '(' functionargs ')' '=' literal block
  28           | tPUBLIC type tIDENTIFIER '(' functionargs ')' '=' literal block

  29  functionarg : type tIDENTIFIER

  30  functionargs :
  31               | functionarg
  32               | functionargs ',' functionarg

  33  type : tINT
  34       | tREAL
  35       | tSTRING
  36       | '[' type ']'

  37  type_void : '!'

  38  block : '{' '}'
  39        | '{' declarations '}'
  40        | '{' list '}'
  41        | '{' declarations list '}'

  42  list : stmt
  43       | list stmt

  44  stmt : expr ';'
  45       | tWHILE '(' expr ')' stmt
  46       | tIF '(' expr ')' stmt
  47       | tIF '(' expr ')' stmt tELSE stmt
  48       | tIF '(' expr ')' stmt tELSIF elsif
  49       | expr tPRINT
  50       | expr tPRINTLN
  51       | tNEXT
  52       | tSTOP
  53       | tRETURN
  54       | block
  55       | tSWEEP '+' '(' lval ':' expr ':' expr ')' stmt
  56       | tSWEEP '+' '(' lval ':' expr ':' expr ':' expr ')' stmt
  57       | tSWEEP '-' '(' lval ':' expr ':' expr ':' expr ')' stmt
  58       | tSWEEP '-' '(' lval ':' expr ':' expr ')' stmt

  59  elsif : '(' expr ')' stmt
  60        | '(' expr ')' stmt tELSE stmt
  61        | '(' expr ')' stmt tELSIF elsif

  62  expr : literal
  63       | tNULL
  64       | '+' expr
  65       | '-' expr
  66       | '~' expr
  67       | expr '+' expr
  68       | expr '-' expr
  69       | expr '*' expr
  70       | expr '/' expr
  71       | expr '%' expr
  72       | expr '<' expr
  73       | expr '>' expr
  74       | expr tGE expr
  75       | expr tLE expr
  76       | expr tNE expr
  77       | expr tEQ expr
  78       | expr tAND expr
  79       | expr tOR expr
  80       | '(' expr ')'
  81       | tREAD
  82       | lval
  83       | lval '=' expr
  84       | lval '?'
  85       | tIDENTIFIER '(' argscall ')'

  86  literal : tINTEGER
  87          | tDOUBLE
  88          | string

  89  string : string tSTRING
  90         | tSTRING

  91  argscall :
  92           | calls

  93  calls : expr
  94        | calls ',' expr

  95  lval : tIDENTIFIER
  96       | expr '[' expr ']'

state 0
	$accept : . file $end  (0)
	file : .  (2)

	tSTRING  shift 1
	tPUBLIC  shift 2
	tUSE  shift 3
	tPROCEDURE  shift 4
	tINT  shift 5
	tREAL  shift 6
	'['  shift 7
	$end  reduce 2

	file  goto 8
	declaration  goto 9
	var  goto 10
	declarations  goto 11
	type  goto 12
	function  goto 13


state 1
	type : tSTRING .  (35)

	.  reduce 35


state 2
	var : tPUBLIC . type tIDENTIFIER  (8)
	var : tPUBLIC . type tIDENTIFIER '=' expr  (11)
	function : tPUBLIC . type tIDENTIFIER '(' functionargs ')'  (18)
	function : tPUBLIC . type tIDENTIFIER '(' functionargs ')' '=' literal  (20)
	function : tPUBLIC . type tIDENTIFIER '(' functionargs ')' block  (24)
	function : tPUBLIC . type tIDENTIFIER '(' functionargs ')' '=' literal block  (28)

	tSTRING  shift 1
	tINT  shift 5
	tREAL  shift 6
	'['  shift 7
	.  error

	type  goto 14


state 3
	var : tUSE . type tIDENTIFIER  (9)
	var : tUSE . type tIDENTIFIER '=' expr  (12)
	function : tUSE . type tIDENTIFIER '(' functionargs ')'  (17)

	tSTRING  shift 1
	tINT  shift 5
	tREAL  shift 6
	'['  shift 7
	.  error

	type  goto 15


state 4
	function : tPROCEDURE . tIDENTIFIER '(' functionargs ')'  (13)
	function : tPROCEDURE . tUSE type_void tIDENTIFIER '(' functionargs ')'  (14)
	function : tPROCEDURE . tPUBLIC type_void tIDENTIFIER '(' functionargs ')'  (15)
	function : tPROCEDURE . type_void tIDENTIFIER '(' functionargs ')' block  (21)
	function : tPROCEDURE . tPUBLIC type_void tIDENTIFIER '(' functionargs ')' block  (22)
	function : tPROCEDURE . tIDENTIFIER '(' functionargs ')' block  (25)
	function : tPROCEDURE . tPUBLIC type_void tIDENTIFIER '(' functionargs ')' '=' literal block  (26)

	tIDENTIFIER  shift 16
	tPUBLIC  shift 17
	tUSE  shift 18
	'!'  shift 19
	.  error

	type_void  goto 20


state 5
	type : tINT .  (33)

	.  reduce 33


state 6
	type : tREAL .  (34)

	.  reduce 34


state 7
	type : '[' . type ']'  (36)

	tSTRING  shift 1
	tINT  shift 5
	tREAL  shift 6
	'['  shift 7
	.  error

	type  goto 21


state 8
	$accept : file . $end  (0)

	$end  accept


state 9
	declarations : declaration .  (3)

	.  reduce 3


state 10
	declaration : var . ';'  (5)

	';'  shift 22
	.  error


state 11
	file : declarations .  (1)
	declarations : declarations . declaration  (4)

	tSTRING  shift 1
	tPUBLIC  shift 2
	tUSE  shift 3
	tPROCEDURE  shift 4
	tINT  shift 5
	tREAL  shift 6
	'['  shift 7
	$end  reduce 1

	declaration  goto 23
	var  goto 10
	type  goto 12
	function  goto 13


state 12
	var : type . tIDENTIFIER  (7)
	var : type . tIDENTIFIER '=' expr  (10)
	function : type . tIDENTIFIER '(' functionargs ')'  (16)
	function : type . tIDENTIFIER '(' functionargs ')' '=' literal  (19)
	function : type . tIDENTIFIER '(' functionargs ')' block  (23)
	function : type . tIDENTIFIER '(' functionargs ')' '=' literal block  (27)

	tIDENTIFIER  shift 24
	.  error


state 13
	declaration : function .  (6)

	.  reduce 6


state 14
	var : tPUBLIC type . tIDENTIFIER  (8)
	var : tPUBLIC type . tIDENTIFIER '=' expr  (11)
	function : tPUBLIC type . tIDENTIFIER '(' functionargs ')'  (18)
	function : tPUBLIC type . tIDENTIFIER '(' functionargs ')' '=' literal  (20)
	function : tPUBLIC type . tIDENTIFIER '(' functionargs ')' block  (24)
	function : tPUBLIC type . tIDENTIFIER '(' functionargs ')' '=' literal block  (28)

	tIDENTIFIER  shift 25
	.  error


state 15
	var : tUSE type . tIDENTIFIER  (9)
	var : tUSE type . tIDENTIFIER '=' expr  (12)
	function : tUSE type . tIDENTIFIER '(' functionargs ')'  (17)

	tIDENTIFIER  shift 26
	.  error


state 16
	function : tPROCEDURE tIDENTIFIER . '(' functionargs ')'  (13)
	function : tPROCEDURE tIDENTIFIER . '(' functionargs ')' block  (25)

	'('  shift 27
	.  error


state 17
	function : tPROCEDURE tPUBLIC . type_void tIDENTIFIER '(' functionargs ')'  (15)
	function : tPROCEDURE tPUBLIC . type_void tIDENTIFIER '(' functionargs ')' block  (22)
	function : tPROCEDURE tPUBLIC . type_void tIDENTIFIER '(' functionargs ')' '=' literal block  (26)

	'!'  shift 19
	.  error

	type_void  goto 28


state 18
	function : tPROCEDURE tUSE . type_void tIDENTIFIER '(' functionargs ')'  (14)

	'!'  shift 19
	.  error

	type_void  goto 29


state 19
	type_void : '!' .  (37)

	.  reduce 37


state 20
	function : tPROCEDURE type_void . tIDENTIFIER '(' functionargs ')' block  (21)

	tIDENTIFIER  shift 30
	.  error


state 21
	type : '[' type . ']'  (36)

	']'  shift 31
	.  error


state 22
	declaration : var ';' .  (5)

	.  reduce 5


state 23
	declarations : declarations declaration .  (4)

	.  reduce 4


state 24
	var : type tIDENTIFIER .  (7)
	var : type tIDENTIFIER . '=' expr  (10)
	function : type tIDENTIFIER . '(' functionargs ')'  (16)
	function : type tIDENTIFIER . '(' functionargs ')' '=' literal  (19)
	function : type tIDENTIFIER . '(' functionargs ')' block  (23)
	function : type tIDENTIFIER . '(' functionargs ')' '=' literal block  (27)

	'='  shift 32
	'('  shift 33
	';'  reduce 7


state 25
	var : tPUBLIC type tIDENTIFIER .  (8)
	var : tPUBLIC type tIDENTIFIER . '=' expr  (11)
	function : tPUBLIC type tIDENTIFIER . '(' functionargs ')'  (18)
	function : tPUBLIC type tIDENTIFIER . '(' functionargs ')' '=' literal  (20)
	function : tPUBLIC type tIDENTIFIER . '(' functionargs ')' block  (24)
	function : tPUBLIC type tIDENTIFIER . '(' functionargs ')' '=' literal block  (28)

	'='  shift 34
	'('  shift 35
	';'  reduce 8


state 26
	var : tUSE type tIDENTIFIER .  (9)
	var : tUSE type tIDENTIFIER . '=' expr  (12)
	function : tUSE type tIDENTIFIER . '(' functionargs ')'  (17)

	'='  shift 36
	'('  shift 37
	';'  reduce 9


state 27
	function : tPROCEDURE tIDENTIFIER '(' . functionargs ')'  (13)
	function : tPROCEDURE tIDENTIFIER '(' . functionargs ')' block  (25)
	functionargs : .  (30)

	tSTRING  shift 1
	tINT  shift 5
	tREAL  shift 6
	'['  shift 7
	')'  reduce 30
	','  reduce 30

	functionarg  goto 38
	functionargs  goto 39
	type  goto 40


state 28
	function : tPROCEDURE tPUBLIC type_void . tIDENTIFIER '(' functionargs ')'  (15)
	function : tPROCEDURE tPUBLIC type_void . tIDENTIFIER '(' functionargs ')' block  (22)
	function : tPROCEDURE tPUBLIC type_void . tIDENTIFIER '(' functionargs ')' '=' literal block  (26)

	tIDENTIFIER  shift 41
	.  error


state 29
	function : tPROCEDURE tUSE type_void . tIDENTIFIER '(' functionargs ')'  (14)

	tIDENTIFIER  shift 42
	.  error


state 30
	function : tPROCEDURE type_void tIDENTIFIER . '(' functionargs ')' block  (21)

	'('  shift 43
	.  error


state 31
	type : '[' type ']' .  (36)

	.  reduce 36


state 32
	var : type tIDENTIFIER '=' . expr  (10)

	tINTEGER  shift 44
	tDOUBLE  shift 45
	tIDENTIFIER  shift 46
	tSTRING  shift 47
	tNULL  shift 48
	tREAD  shift 49
	'~'  shift 50
	'+'  shift 51
	'-'  shift 52
	'('  shift 53
	.  error

	expr  goto 54
	literal  goto 55
	lval  goto 56
	string  goto 57


state 33
	function : type tIDENTIFIER '(' . functionargs ')'  (16)
	function : type tIDENTIFIER '(' . functionargs ')' '=' literal  (19)
	function : type tIDENTIFIER '(' . functionargs ')' block  (23)
	function : type tIDENTIFIER '(' . functionargs ')' '=' literal block  (27)
	functionargs : .  (30)

	tSTRING  shift 1
	tINT  shift 5
	tREAL  shift 6
	'['  shift 7
	')'  reduce 30
	','  reduce 30

	functionarg  goto 38
	functionargs  goto 58
	type  goto 40


state 34
	var : tPUBLIC type tIDENTIFIER '=' . expr  (11)

	tINTEGER  shift 44
	tDOUBLE  shift 45
	tIDENTIFIER  shift 46
	tSTRING  shift 47
	tNULL  shift 48
	tREAD  shift 49
	'~'  shift 50
	'+'  shift 51
	'-'  shift 52
	'('  shift 53
	.  error

	expr  goto 59
	literal  goto 55
	lval  goto 56
	string  goto 57


state 35
	function : tPUBLIC type tIDENTIFIER '(' . functionargs ')'  (18)
	function : tPUBLIC type tIDENTIFIER '(' . functionargs ')' '=' literal  (20)
	function : tPUBLIC type tIDENTIFIER '(' . functionargs ')' block  (24)
	function : tPUBLIC type tIDENTIFIER '(' . functionargs ')' '=' literal block  (28)
	functionargs : .  (30)

	tSTRING  shift 1
	tINT  shift 5
	tREAL  shift 6
	'['  shift 7
	')'  reduce 30
	','  reduce 30

	functionarg  goto 38
	functionargs  goto 60
	type  goto 40


state 36
	var : tUSE type tIDENTIFIER '=' . expr  (12)

	tINTEGER  shift 44
	tDOUBLE  shift 45
	tIDENTIFIER  shift 46
	tSTRING  shift 47
	tNULL  shift 48
	tREAD  shift 49
	'~'  shift 50
	'+'  shift 51
	'-'  shift 52
	'('  shift 53
	.  error

	expr  goto 61
	literal  goto 55
	lval  goto 56
	string  goto 57


state 37
	function : tUSE type tIDENTIFIER '(' . functionargs ')'  (17)
	functionargs : .  (30)

	tSTRING  shift 1
	tINT  shift 5
	tREAL  shift 6
	'['  shift 7
	')'  reduce 30
	','  reduce 30

	functionarg  goto 38
	functionargs  goto 62
	type  goto 40


state 38
	functionargs : functionarg .  (31)

	.  reduce 31


state 39
	function : tPROCEDURE tIDENTIFIER '(' functionargs . ')'  (13)
	function : tPROCEDURE tIDENTIFIER '(' functionargs . ')' block  (25)
	functionargs : functionargs . ',' functionarg  (32)

	')'  shift 63
	','  shift 64
	.  error


state 40
	functionarg : type . tIDENTIFIER  (29)

	tIDENTIFIER  shift 65
	.  error


state 41
	function : tPROCEDURE tPUBLIC type_void tIDENTIFIER . '(' functionargs ')'  (15)
	function : tPROCEDURE tPUBLIC type_void tIDENTIFIER . '(' functionargs ')' block  (22)
	function : tPROCEDURE tPUBLIC type_void tIDENTIFIER . '(' functionargs ')' '=' literal block  (26)

	'('  shift 66
	.  error


state 42
	function : tPROCEDURE tUSE type_void tIDENTIFIER . '(' functionargs ')'  (14)

	'('  shift 67
	.  error


state 43
	function : tPROCEDURE type_void tIDENTIFIER '(' . functionargs ')' block  (21)
	functionargs : .  (30)

	tSTRING  shift 1
	tINT  shift 5
	tREAL  shift 6
	'['  shift 7
	')'  reduce 30
	','  reduce 30

	functionarg  goto 38
	functionargs  goto 68
	type  goto 40


state 44
	literal : tINTEGER .  (86)

	.  reduce 86


state 45
	literal : tDOUBLE .  (87)

	.  reduce 87


state 46
	expr : tIDENTIFIER . '(' argscall ')'  (85)
	lval : tIDENTIFIER .  (95)

	'('  shift 69
	tPRINT  reduce 95
	tPRINTLN  reduce 95
	tAND  reduce 95
	tOR  reduce 95
	'+'  reduce 95
	'-'  reduce 95
	'='  reduce 95
	'['  reduce 95
	tGE  reduce 95
	tLE  reduce 95
	tEQ  reduce 95
	tNE  reduce 95
	'>'  reduce 95
	'<'  reduce 95
	'*'  reduce 95
	'/'  reduce 95
	'%'  reduce 95
	';'  reduce 95
	')'  reduce 95
	','  reduce 95
	']'  reduce 95
	':'  reduce 95
	'?'  reduce 95


state 47
	string : tSTRING .  (90)

	.  reduce 90


state 48
	expr : tNULL .  (63)

	.  reduce 63


state 49
	expr : tREAD .  (81)

	.  reduce 81


state 50
	expr : '~' . expr  (66)

	tINTEGER  shift 44
	tDOUBLE  shift 45
	tIDENTIFIER  shift 46
	tSTRING  shift 47
	tNULL  shift 48
	tREAD  shift 49
	'~'  shift 50
	'+'  shift 51
	'-'  shift 52
	'('  shift 53
	.  error

	expr  goto 70
	literal  goto 55
	lval  goto 56
	string  goto 57


state 51
	expr : '+' . expr  (64)

	tINTEGER  shift 44
	tDOUBLE  shift 45
	tIDENTIFIER  shift 46
	tSTRING  shift 47
	tNULL  shift 48
	tREAD  shift 49
	'~'  shift 50
	'+'  shift 51
	'-'  shift 52
	'('  shift 53
	.  error

	expr  goto 71
	literal  goto 55
	lval  goto 56
	string  goto 57


state 52
	expr : '-' . expr  (65)

	tINTEGER  shift 44
	tDOUBLE  shift 45
	tIDENTIFIER  shift 46
	tSTRING  shift 47
	tNULL  shift 48
	tREAD  shift 49
	'~'  shift 50
	'+'  shift 51
	'-'  shift 52
	'('  shift 53
	.  error

	expr  goto 72
	literal  goto 55
	lval  goto 56
	string  goto 57


state 53
	expr : '(' . expr ')'  (80)

	tINTEGER  shift 44
	tDOUBLE  shift 45
	tIDENTIFIER  shift 46
	tSTRING  shift 47
	tNULL  shift 48
	tREAD  shift 49
	'~'  shift 50
	'+'  shift 51
	'-'  shift 52
	'('  shift 53
	.  error

	expr  goto 73
	literal  goto 55
	lval  goto 56
	string  goto 57


state 54
	var : type tIDENTIFIER '=' expr .  (10)
	expr : expr . '+' expr  (67)
	expr : expr . '-' expr  (68)
	expr : expr . '*' expr  (69)
	expr : expr . '/' expr  (70)
	expr : expr . '%' expr  (71)
	expr : expr . '<' expr  (72)
	expr : expr . '>' expr  (73)
	expr : expr . tGE expr  (74)
	expr : expr . tLE expr  (75)
	expr : expr . tNE expr  (76)
	expr : expr . tEQ expr  (77)
	expr : expr . tAND expr  (78)
	expr : expr . tOR expr  (79)
	lval : expr . '[' expr ']'  (96)

	tAND  shift 74
	tOR  shift 75
	'+'  shift 76
	'-'  shift 77
	'['  shift 78
	tGE  shift 79
	tLE  shift 80
	tEQ  shift 81
	tNE  shift 82
	'>'  shift 83
	'<'  shift 84
	'*'  shift 85
	'/'  shift 86
	'%'  shift 87
	';'  reduce 10


state 55
	expr : literal .  (62)

	.  reduce 62


state 56
	expr : lval .  (82)
	expr : lval . '=' expr  (83)
	expr : lval . '?'  (84)
